# python_project

./: .gitignore  .python-version  LICENSE  Makefile  README.md  dev-requirements.txt  noxfile.py  pyproject.toml  requirements.txt
tests/: test_demo.py
